--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,7 @@ RUN npm run build
 
 # Stage 2: Serve the application
 FROM nginx:alpine
-COPY --from=build-stage /app/dist /usr/share/nginx/html
+COPY --from=build-stage /frontend/dist /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
 
