--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,11 +1,30 @@
+#server {
+#    listen 80;
+#
+#    location / {
+#        proxy_pass http://frontend:3000;
+#    }
+#
+#    location /api/ {
+#        proxy_pass http://backend:5000;
+#    }
+#}
 server {
     listen 80;
 
-    location / {
-        proxy_pass http://frontend:3000;
+    # Route für Backend-API-Anfragen
+    location /api/ {
+        proxy_pass http://backend:5000;  # Leitet API-Anfragen an das Flask-Backend weiter
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /api/ {
-        proxy_pass http://backend:5000;
+    # Route für alle anderen Anfragen (Frontend)
+    location / {
+        root /usr/share/nginx/html;  # Statische Dateien des Frontends
+        index index.html;
+        try_files $uri /index.html;  # Unterstützt Vue/Nuxt.js Routen
     }
 }
