--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,3 +5,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 EXPOSE 5000
 CMD ["python", "app.py"]
+# Nutze Gunicorn als Produktionsserver nein ich benutze waitress als produktionsserver
+#CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:5000", "app:app"]
