--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,10 @@
   "description": "Frontend für das Projekt",
   "main": "src/main.js",
   "scripts": {
-  "serve": "vue-cli-service serve",
-  "build": "vue-cli-service build",
-  "lint": "vue-cli-service lint"
-}
-,
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
+  },
   "dependencies": {
     "axios": "^0.27.2",
     "date-fns": "^2.29.2",
@@ -21,10 +20,12 @@
     "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^5.2.0",
     "@vue/cli-service": "^5.0.8",
     "@vue/compiler-sfc": "^3.4.31",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.7.1"
+    "eslint-plugin-vue": "^8.7.1",
+    "vite": "^5.4.11"
   }
 }
